--- a/package.json
+++ b/package.json
@@ -15,24 +15,48 @@
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
     "@mui/material-nextjs": "^6.4.3",
+    "@mui/system": "^6.4.6",
+    "@mui/utils": "^6.4.6",
     "@mui/x-data-grid": "^7.27.2",
     "@mui/x-date-pickers": "^7.27.1",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.49.1",
     "@toolpad/core": "^0.12.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "globals": "^16.0.0",
+    "lucide-react": "^0.477.0",
     "next": "^15.0.0",
+    "next-themes": "^0.4.4",
+    "radix-ui": "^1.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.0.0",
+    "tailwind-merge": "^3.0.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "latest",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "eslint": "latest",
-    "eslint-config-next": "^15.0.0",
-    "typescript": "latest"
+    "@eslint/js": "^9.13.0",
+    "@next/eslint-plugin-next": "^15.0.3",
+    "@tabler/icons-react": "^3.12.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^9.13.0",
+    "eslint-config-next": "^15",
+    "eslint-plugin-react": "^7.37.2",
+    "framer-motion": "^11.3.30",
+    "globals": "^15.11.0",
+    "postcss": "^8.5.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5",
+    "typescript-eslint": "^8.11.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
