--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.477.0",
     "next": "^15.0.0",
     "next-themes": "^0.4.4",
+    "pnpm": "^10.6.4",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
