feat: complete user referrals

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "breadcrumps",
         "mtaani",
+        "Pesa",
         "Sitemark",
         "supabase",
         "toolpad",
