--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
     "@toolpad/core": "^0.12.1",
+    "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "globals": "^16.0.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.477.0",
     "next": "^15.0.0",
     "next-themes": "^0.4.4",
